correction overflow 4

--- a/main.scss
+++ b/main.scss
@@ -390,7 +390,7 @@ body {
 .sticky {
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 5;
 } 
 
